#5 Lowering Java version to 11.